# Histopathology-Classification

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/augmentation/: Augmentation_No_Stain.yaml  Augmentation_only.yaml  HEStain_and_MT_Macenko.yaml  HEStain_and_Macenko.yaml  no_augmentation.yaml
configs/dataset/: dataset_base.yaml
configs/models/: dann_dino.yaml  dann_phikon.yaml  dino_full_finetune.yaml  dino_lora.yaml  phikon_lora.yaml
configs/training/: training_base.yaml  training_dann.yaml  training_ema.yaml  training_full_finetune.yaml
src/: main.py  prediction.py  test_time_augmentation.py  utilities.py
src/data/: __init__.py  augmentation.py  dataset.py  normalization.py
src/light/: __init__.py  dataset_module.py  models_module.py
src/models/: __init__.py  backbone_and_heads.py  dann.py  lora.py  model.py
