[project]
name = "dlmi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentationsx[headless]>=2.1.0",
    "h5py>=3.16.0",
    "hydra-core>=1.3.2",
    "mlflow>=3.10.1",
    "omegaconf>=2.3.0",
    "peft>=0.18.1",
    "pytorch-lightning>=2.6.1",
    "ruff>=0.15.7",
    "torch>=2.1.0",
    "torchstain>=1.4.1",
    "torchvision>=0.16.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
